Adjustments to work out of the box

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,5 @@
 # This file contains a list of authors. If you contribute a patch
 # please include yourself in this file, in alfabethical order
 
+Anderson Grudtner Martins <anderson@grudtner.me>
 Thatcher Peskens <thatcher@dotcloud.com>
